--- a/Implementación.ipynb
+++ b/Implementación.ipynb
@@ -138,7 +138,7 @@
     "similar_tweets_df[\"Tweet2\"] = similar_tweets_df[\"Index2\"].apply(lambda x: df.iloc[x][\"text\"])\n",
     "\n",
     "# Guardar el DataFrame en un archivo CSV\n",
-    "similar_tweets_df.to_csv(\"similar_tweetsP.csv\", index=False)"
+    "similar_tweets_df.to_csv(\"similar_tweets.csv\", index=False)"
    ]
   },
   {
